kubernetes/wordpress-mysql/lab-03/wordpress/wordpress-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-nodeport
  namespace: lab3
  labels:
    app: wordpress
    tier: frontend
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30003  # Use a port not used in previous labs
