kubernetes/wordpress-mysql/lab-03/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: lab3
  labels:
    app: wordpress
    tier: frontend
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
